--- a/css/game.css
+++ b/css/game.css
@@ -1,14 +1,24 @@
 .background    { background: rgb(97, 97, 97);
                  table-layout: fixed;
                  border-spacing: 0;   }
-.background td { padding: 0;          }
-.lava          { background: rgb(255, 100, 100); }
-.wall          { background: rgb(215, 215, 215); }
-.floater    { background: rbg(128, 0, 0);  }
+.background  { padding: 0;          }
+.lava          { background: rgb(246, 3, 33); }
+.wall          { background: black;   }
+
+.actor  { position: absolute;  }
+.coin   { background: rgb(241, 229, 89); }
+.player { background: rgb(64, 64, 64); }
 
 .game {
   overflow: hidden;
   max-width: 600px;
   max-height: 450px;
   position: relative;
+}
+
+.lost .player {
+  background: rgb(67, 67, 67);
+}
+.won .player {
+  box-shadow: -4px -7px 8px white, 4px -7px 8px white;
 }
